--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
+    "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "i": "^0.3.7",
+    "jquery": "^3.7.1",
+    "mongodb": "^6.0.0",
     "next": "13.4.19",
+    "popper.js": "^1.16.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0"
   }
 }
